Remove Java backend in favor of Rust-only architecture
The project evolved from a Java/LangChain prototype to a pure Rust workflow engine. This commit removes all unused Java code and updates documentation to reflect the actual architecture:

**Removed:**
- backend/ directory (Java Javalin server, never used in practice)
- executeGraph() stub function (no callers)
- All references to port 7000 and Java tooling

**Updated:**
- README: Now describes Rust workflow engine, Tauri packaging, and actual capabilities
- PACKAGING.md: Replaced GraalVM/jpackage instructions with Tauri + Rust build process
- ui/nativeBackend.js: Updated healthcheck() to use port 9091; removed unused executeGraph
- ui/package.json: Removed prepare-backend script
- TAURI_NOTES.md: Clarified how Rust backend integrates with Tauri/Cargo
- README_IOS.md: Updated to use Rust backend on port 9091; simplified iOS development guide

The project now has a clean, accurate codebase and documentation that matches the actual Rust-based implementation.

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>